--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,23 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container">
+    <div id="main" role="main" class="container clearfix">
       {{ content }}
+      <div id="sidebar">
+        <div style="width:300px;max-width:100%;height:400px;background:#F30;"></div>
+        <div class="ad">
+          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <!-- Mattferderer.com TopRight -->
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-2598795656959200"
+               data-ad-slot="1523853374"
+               data-ad-format="auto"></ins>
+          <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        </div>
+      </div>
     </div>
 
     <div class="wrapper-footer">
