--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -36,9 +36,21 @@ $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 
-// Mobile breakpoints
-@mixin mobile {
+// Breakpoints
+@mixin small {
   @media screen and (max-width: 640px) {
+    @content;
+  }
+}
+
+@mixin medium {
+  @media screen and (max-width: 960px) and (min-width: 641px) {
+    @content;
+  }
+}
+
+@mixin large {
+  @media screen and (min-width: 961px) {
     @content;
   }
 }
