--- a/style.scss
+++ b/style.scss
@@ -242,8 +242,9 @@ nav {
 //
 #main{
   .page, .posts{
+    width: 100%;
     @include large {
-      max-width: 70%;
+      width: 70%;
       float:left;
     }
   }  
@@ -280,10 +281,10 @@ nav {
 }
 
 #sidebar{
-  display:none;
+  width:100%;
   @include large {
     float:left;
-    max-width: 25%;
+    width: 25%;
     margin-left:5%;
     display:block;
   }
