--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,8 @@
         </footer>
       </div>
     </div>
-
+    <script type="text/javascript" src="/js/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
     {% include analytics.html %}
   </body>
 </html>
